tests/errors/sem10.kt
fun main() {
    var x: String;
    ++x; // not numeric
}